[package]
name = "vanaheimr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", features = ["rustls"] }
tar = "0.4.40"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
flate2 = "1.0.28"
futures-util = "0.3.30"
bollard="*"
log = "0.4.21"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.12.2", features = ["macros"] }
lazy_static = "1.4.0"
sha2 = "0.10.8"
pcap = "1.3.0"
get_if_addrs = "0.5.3"
